--- a/application/views/scripts/countries/index.phtml
+++ b/application/views/scripts/countries/index.phtml
@@ -1,28 +1,20 @@
 <?php ?>
 
-<script type="text/javascript" charset="utf-8"> 
-	var aiSelectedRows = [];
-
-	$(document).ready(function() {
-		fnDatatableInit();
-	} );
-
-</script>
-
-<script type="text/javascript" language="javascript" src="/js/dashboard.assets.datatable.js"></script>
-
 <div class="ui-widget">
-<table id="assetsTable" cellpadding="0" cellspacing="0" border="0" class="display">
-	<thead>
-		<tr>
-			<th>#</th>
-			<th>Наименование</th>
-			<th>Класс</th>
-			<th>Отрасль</th>
-			<th>Имя ММВБ</th>
-			<th>Код ММВБ</th>
-            <th>Цвет</th>
-		</tr>
-	</thead>
-</table>	  
+
+<?php if ($this->countries): ?>
+	<table>
+    	<tr>
+        	<th>Country</th>
+        </tr>
+<?php foreach ($this->countries as $key => $val): ?>
+        <tr>
+            <td><?php echo $this->escape($val['countryName']) ?></td>
+        </tr>
+<?php endforeach; ?>
+    </table>
+<?php else: ?>
+	<p>Нет стран для отображения.</p>
+<?php endif;?>
+  
 </div>
