--- a/application/views/scripts/countries/index.phtml
+++ b/application/views/scripts/countries/index.phtml
@@ -1,20 +1,54 @@
 <?php ?>
 
-<div class="ui-widget">
+<style type="text/css">
+	#tagCloud {  
+      width:290px; background-color:#575454; text-align:center; padding:5px;  
+      overflow:auto; font-family:arial;  
+    }  
+    #tagCloud h2 { color:#ffffff; font-size:2.5em; margin:0 0 10px 0; padding:15px 0 15px 80px; }  
+    
+    #tagList { margin:0; padding:0; }  
+    #tagList li { list-style-type:none; float:left; margin:0 10px; height:35px; text-decoration:none; color:#ffffff;}  
+</style>
 
-<?php if ($this->countries): ?>
-	<table>
-    	<tr>
-        	<th>Country</th>
-        </tr>
-<?php foreach ($this->countries as $key => $val): ?>
-        <tr>
-            <td><?php echo $this->escape($val['countryName']) ?></td>
-        </tr>
-<?php endforeach; ?>
-    </table>
-<?php else: ?>
-	<p>Нет стран для отображения.</p>
-<?php endif;?>
-  
+<div id="tagCloud">
+	<h2>Countries</h2>
 </div>
+
+<script type="text/javascript">  
+
+$(function() {  
+	// Запрашиваем список стран с количествами кружек
+    $.getJSON("countries/list", function(data) {
+		var countMin = 0, countMax = 0;
+		var sizeMin = 1.0, sizeMax = 2.0;		// Размеры в .em в пропорции от кол-ва кружек
+
+		// Создаем ненумерованый список
+		$("<ul>").attr("id", "tagList").appendTo("#tagCloud");  
+      
+		// Теперь в цикле создаем теги 
+		$.each(data, function(index, value) { 
+		
+			var li = $("<li>");  
+
+			// TODO: линк потом заменится на обработку нажатия
+			//$("<a>").text(value.countryName).attr({title:"See all mugs from " + value.countryName, href:"mugs/list/" + value.countryName}).appendTo(li);  
+
+			li.text(value.countryName).data("mugsCount", value.mugsCount);
+			if ( value.mugsCount > countMax ) { countMax = value.mugsCount };
+			if ( value.mugsCount < countMin || countMin == 0 ) { countMin = value.mugsCount };
+
+      		li.appendTo("#tagList");  
+		});
+		
+		if ( countMax > countMin ) {
+			$('#tagList li').each(function(index) {
+				var countProportion = ($(this).data("mugsCount") - countMin) / (countMax - countMin);
+				var sizeNew = sizeMin + (sizeMax - sizeMin) * countProportion
+				$(this).animate( {fontSize: sizeNew + 'em'} );
+			});
+		}
+		
+	});  
+});  
+</script> 
