--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,43 +1,54 @@
-<style>
-    a:link,
-    a:visited
-    {
-        color: #0398CA;
-    }
+<?php ?>
 
-    span#zf-name
-    {
-        color: #91BE3F;
-    }
-
-    div#welcome
-    {
-        color: #FFFFFF;
-        background-image: url(http://framework.zend.com/images/bkg_header.jpg);
-        width:  600px;
-        height: 400px;
-        border: 2px solid #444444;
-        overflow: hidden;
-        text-align: center;
-    }
-
-    div#more-information
-    {
-        background-image: url(http://framework.zend.com/images/bkg_body-bottom.gif);
-        height: 100%;
-    }
+<style type="text/css">
+	#tagCloud {  
+      width:290px; background-color:#575454; text-align:center; padding:5px;  
+      overflow:auto; font-family:arial;  
+    }  
+    #tagCloud h2 { color:#ffffff; font-size:2.5em; margin:0 0 10px 0; padding:15px 0 15px 80px; }  
+    
+    #tagList { margin:0; padding:0; }  
+    #tagList li { list-style-type:none; float:left; margin:0 10px; height:35px; text-decoration:none; color:#ffffff;}  
 </style>
-<div id="welcome">
-    <h1>Welcome to the <span id="zf-name">Zend Framework!</span></h1>
 
-    <h3>This is your project's main page</h3>
-
-    <div id="more-information">
-        <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
-        <p>
-            Helpful Links: <br />
-            <a href="http://framework.zend.com/">Zend Framework Website</a> |
-            <a href="http://framework.zend.com/manual/en/">Zend Framework Manual</a>
-        </p>
-    </div>
+<div id="tagCloud">
+	<h2>Countries</h2>
 </div>
+
+<script type="text/javascript">  
+
+$(function() {  
+	// Запрашиваем список стран с количествами кружек
+    $.getJSON("api/countries", function(data) {
+		var countMin = 0, countMax = 0;
+		var sizeMin = 1.0, sizeMax = 2.0;		// Размеры в .em в пропорции от кол-ва кружек
+
+		// Создаем ненумерованый список
+		$("<ul>").attr("id", "tagList").appendTo("#tagCloud");  
+      
+		// Теперь в цикле создаем теги 
+		$.each(data, function(index, value) { 
+		
+			var li = $("<li>");  
+
+			// TODO: линк потом заменится на обработку нажатия
+			//$("<a>").text(value.countryName).attr({title:"See all mugs from " + value.countryName, href:"mugs/list/" + value.countryName}).appendTo(li);  
+
+			li.text(value.countryName).data("mugsCount", value.mugsCount);
+			if ( value.mugsCount > countMax ) { countMax = value.mugsCount };
+			if ( value.mugsCount < countMin || countMin == 0 ) { countMin = value.mugsCount };
+
+      		li.appendTo("#tagList");  
+		});
+		
+		if ( countMax > countMin ) {
+			$('#tagList li').each(function(index) {
+				var countProportion = ($(this).data("mugsCount") - countMin) / (countMax - countMin);
+				var sizeNew = sizeMin + (sizeMax - sizeMin) * countProportion
+				$(this).animate( {fontSize: sizeNew + 'em'} );
+			});
+		}
+		
+	});  
+});  
+</script> 
