Simplified layouts and added Admin controller

--- a/application/layouts/scripts/login.phtml
+++ b/application/layouts/scripts/login.phtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>PEKO-M Trading Dashboard</title>
+<title>Starbucks Mugs</title>
 <script type="text/javascript" language="javascript" src="/js/jquery-1.5.1.js"></script> 
 <script type="text/javascript" language="javascript" src="/js/jquery-ui.js"></script>
 <link rel="stylesheet" href="/css/redmond/jquery-ui.css" type="text/css" media="all" /> 
