--- a/application/layouts/scripts/login.phtml
+++ b/application/layouts/scripts/login.phtml
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Starbucks Mugs</title>
-<script type="text/javascript" language="javascript" src="/js/jquery-1.5.1.js"></script> 
+<script type="text/javascript" language="javascript" src="/js/jquery-1.7.1.min.js"></script> 
 <script type="text/javascript" language="javascript" src="/js/jquery-ui.js"></script>
 <link rel="stylesheet" href="/css/redmond/jquery-ui.css" type="text/css" media="all" /> 
 </head>
