--- a/application/views/scripts/admin/acquire.phtml
+++ b/application/views/scripts/admin/acquire.phtml
@@ -10,60 +10,43 @@
 	<li id="task7">Анализ списка кружек</li>
 </ol>
 
-<h2>Countries List</h2>
-<ol id="countries">
+<h2>Countries to be Added to database</h2>
+<ol id="countries2Add">
 </ol>
 
 <script type="text/javascript">
+/*
+ * ArrayIndexOf(a, fnc) takes two parameters:
+ *	- the array
+ *	- a function of signature: bool f(item) {}
+ *
+ * ArrayIndexOf compares each array item with, well, whatever you want,
+ * and returns the index of the item in the array, or -1 if there is no match.
+ * This approach gives you the flexibility to search for whatever specific field, or fields, you desire.
+*/
+function ArrayIndexOf(a, fnc) {
+	if (!fnc || typeof (fnc) != 'function') {
+		return -1;
+	}
 
+	if (!a || !a.length || a.length < 1) return -1;
+	for (var i = 0; i < a.length; i++) {
+		if (fnc(a[i])) return i;
+	}
+	return -1;
+}
+</script>
+
+<script type="text/javascript">
 $(function() {
-	// AJAX manager from here:
-	// http://stackoverflow.com/questions/4785724/queue-ajax-requests-using-jquery-queue
-	var ajaxManager = (function() {
-		var requests = [];
-
-		return {
-			addReq: function(opt) {
-				requests.push(opt);
-			},
-			removeReq: function(opt) {
-				if( $.inArray(opt, requests) > -1 )
-					requests.splice($.inArray(opt, requests), 1);
-			},
-			run: function() {
-				var self = this,
-					orgSuc;
-
-				if( requests.length ) {
-					oriSuc = requests[0].complete;
-
-					requests[0].complete = function() {
-						if( typeof oriSuc === 'function' ) oriSuc();
-						requests.shift();
-						self.run.apply(self, []);
-					};   
-
-					$.ajax(requests[0]);
-				} else {
-					self.tid = setTimeout(function() {
-						self.run.apply(self, []);
-					}, 1000);
-				}
-			},
-			stop: function() {
-				requests = [];
-				clearTimeout(this.tid);
-			}
-		};
-	}());
-
-	ajaxManager.run();
-	
 	var baseCountries = [];
 	var wikiMugs = [];
 	
-	ajaxManager.addReq({
-		url: '/api/countries',
+	// Добавляем обработку для того, чтобы все анализы запускались только после успешного
+	// выполнения всех AJAX запросов
+	$.when(
+	$.ajax({
+		url: '/admin/countries',
 		dataType: 'json',
 		beforeSend: function() {
 			$('<span>...</span>').appendTo('#task1');
@@ -74,9 +57,8 @@ $(function() {
 			});
 			$('<span>выполнено</span>').appendTo('#task1');
 		}
-	});
-	
-	ajaxManager.addReq({
+	}),
+	$.ajax({
 		url: '/admin/proxy',
 		type: 'get',
 		dataType: 'text',
@@ -88,6 +70,8 @@ $(function() {
 			// Перед вызовом jQuery(data) стоит стоит очистить текстовую строку data от заголовоков,
 			// к примеру взять только содержимое тега <body>, но сделать это исключительно строковыми
 			// функциями.
+			data = data.substring(data.indexOf('<body'));		// Убираем кусок до <body>
+			data = data.substring(0, data.indexOf('</body>')+7);		// и после
 			var html = $(data);
 
 			var s1 = $('span#Countries_\\.26_Cities_Starbucks_Mug_Series', html).parent();	// Элемент-заголовок списка
@@ -97,7 +81,7 @@ $(function() {
 				
 				var s3 = $(this).parent().nextUntil('p,h2')		// обычно два <ul> с сериями. <h2> требуется в конце списка
 				s3.each( function() {
-					var currentSerie = $('li', this).first().contents()[0].nodeValue.trim();
+					var currentSerie = $.trim($('li', this).first().contents()[0].nodeValue);
 					$('li', this).slice(1).each( function() {
 						var newMug = { country: currentCountry, serie: currentSerie, name: $(this).text().trim() };
 						wikiMugs.push( newMug );
@@ -112,7 +96,30 @@ $(function() {
 			*/
 			$('<span>выполнено</span>').appendTo('#task4');
 		}
+	})
+	).then(function() {
+    	$('<span>...</span>').appendTo('#task5');
+    	var countries2Add = [];
+    	
+    	$.each(wikiMugs, function(index, wikiMug) {
+    		var countryId = ArrayIndexOf(baseCountries, function(obj) {
+				return obj.countryName.toUpperCase() == wikiMug.country.toUpperCase() ||
+					   obj.countryAcquireAlias.toUpperCase() == wikiMug.country.toUpperCase();
+			});
+    		if (countryId > -1) {
+    			this.countryId = countryId;
+    		} else {
+    			if (-1 == $.inArray(this.country, countries2Add)) {
+    				countries2Add.push(this.country);
+    			}
+    		}
+    	});
+    	$.each(countries2Add, function(index, value) {
+			var li = $('<li>');
+			li.text(value).appendTo('#countries2Add');
+		});
+		$('<span>выполнено</span>').appendTo('#task5');
 	});
-});
 
+});
 </script>
