Cleaned and organized some CSS

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -27,7 +27,7 @@
 	<div id="panel">
 		<div class="content clearfix">
 			<div class="left">
-				<h1>Welcome to Web-Kreation</h1>
+				<h1>Welcome to Starbucks Mugs Collections</h1>
 				<h2>Sliding login panel Demo with jQuery</h2>		
 				<p class="grey">You can put anything you want in this sliding panel: videos, audio, images, forms... The only limit is your imagination!</p>
 				<h2>Download</h2>
