Working on user auth

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -35,12 +35,12 @@
 			</div>
 			<div class="left">
 				<!-- Login Form -->
-				<form class="clearfix" action="#" method="post">
+				<form class="clearfix" action="/users/login" method="post">
 					<h1>Member Login</h1>
-					<label class="grey" for="log">Username:</label>
-					<input class="field" type="text" name="log" id="log" value="" size="23" />
-					<label class="grey" for="pwd">Password:</label>
-					<input class="field" type="password" name="pwd" id="pwd" size="23" />
+					<label class="grey" for="login">Username:</label>
+					<input class="field" type="text" name="login" id="login" value="" size="23" />
+					<label class="grey" for="password">Password:</label>
+					<input class="field" type="password" name="password" id="password" size="23" />
 	            	<label><input name="rememberme" id="rememberme" type="checkbox" checked="checked" value="forever" /> &nbsp;Remember me</label>
         			<div class="clear"></div>
 					<input type="submit" name="submit" value="Login" class="bt_login" />
